# ibooks-highlight-exporter

./: .gitignore  LICENSE  README.md  epub.py  exporter.py  main.py  models.py  pyproject.toml  requirements.txt
ibooks_highlight_exporter/: base.py  epub.py  exporter.py  helpers.py  main.py  models.py
ibooks_highlight_exporter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
